col for welcome

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </header>
     <section class="welcome">
       <div class="container-lg">
-        <div class="welcome-wrapper w-50">
+        <div class="welcome-wrapper col col-lg-6">
           <h1 class="mb-26">Welcome to Vinnytsia trash company!</h1>
           <span class="d-block mb-46">Choose your job down below to start working.</span>
           <div class="d-flex mb-44">
