--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="welcome-wrapper col col-lg-6">
           <h1 class="mb-26">Welcome to Vinnytsia trash company!</h1>
           <span class="d-block mb-46">Choose your job down below to start working.</span>
-          <div class="d-flex mb-44">
+          <div class="btn-wrapper d-flex mb-44">
             <button class="w-50 mr-20 driver-btn"><img class="mr-10" src="./assets/images/welcome-block/driver.svg" alt="driver-icon">I’m a driver</button>
             <button class="w-50 operator-btn"><img class="mr-10" src="./assets/images/welcome-block/operator.svg" alt="operator-icon"> I’m an operator</button>
           </div>
@@ -89,29 +89,29 @@
       <div class="container-lg">
         <h2 class="about-title text-center mb-32">About Us</h2>
         <p class="about-subtitle text-center center w-50">We want Vinnitsya to be cleaner, safer and healthier city – not just for today, but for next generations to come. </p>
-        <ul class="about__card d-flex">
-          <li class="about__card--item">
+        <ul class="about__card row">
+          <li class="about__card--item col-5 col-md-2">
             <div class="item-wrapper">
               <span>32</span>
               <p>Контейнерних майданчика</p>
               <div class="eclipse"></div> 
             </div>     
           </li>
-          <li class="about__card--item">
+          <li class="about__card--item col-5 col-md-2">
             <div class="item-wrapper">
               <span>20+</span>
               <p>Вантажівок</p>
               <div class="eclipse"></div>
             </div>
           </li>
-          <li class="about__card--item">
+          <li class="about__card--item col-5 col-md-2">
             <div class="item-wrapper">
               <span>25</span>
               <p>Пунктів збору відходів</p>
               <div class="eclipse"></div>
             </div>
           </li>
-          <li class="about__card--item">
+          <li class="about__card--item col-5 col-md-2">
             <div class="item-wrapper">
               <span>99%</span>
               <p>Чистих тереторій</p>
