--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a class="nav-link" href="#about">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Garbage Collecting Points</a>
+                <a class="nav-link" href="#collection">Garbage Collecting Points</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Ground Map</a>
@@ -88,7 +88,7 @@
     <section id="about">
       <div class="container-lg">
         <h2 class="about-title text-center mb-32">About Us</h2>
-        <p class="about-subtitle text-center center w-50">We want Vinnitsya to be cleaner, safer and healthier city – not just for today, but for next generations to come. </p>
+        <p class="about-subtitle text-center center col col-md-6">We want Vinnitsya to be cleaner, safer and healthier city – not just for today, but for next generations to come. </p>
         <ul class="about__card row">
           <li class="about__card--item col-5 col-md-2">
             <div class="item-wrapper">
@@ -122,6 +122,51 @@
       </div>
     </section>
 
+    <section id="collection">
+      <div class="container-lg">
+        <h2 class="collection-title text-center mb-32">Garbage Collection Points</h2>
+        <p class="collection-subtitle text-center center col col-md-6">We want Vinnitsya to be cleaner, safer and healthier city – not just for today, but for next generations to come. </p>
+        <ul class="collection-list d-flex text-center">
+          <li class="collection-list--item">
+            <a href="">
+              <img src="./assets/images/colection/electro.svg" alt="">
+              <span class="d-block">Електроніка</span>
+            </a>
+          </li>
+          <li class="collection-list--item">
+            <a href="">
+              <img src="./assets/images/colection/plastic.svg" alt="">
+              <span class="d-block text-center">Пластик</span>
+            </a>
+          </li>
+          <li class="collection-list--item">
+            <a href="">
+              <img src="./assets/images/colection/metal.svg" alt="">
+              <span class="d-block text-center">Метал</span>
+            </a>
+          </li>
+          <li class="collection-list--item">
+            <a href="">
+              <img src="./assets/images/colection/glass.svg" alt="">
+              <span class="d-block text-center">Скло</span>
+            </a>
+          </li>
+          <li class="collection-list--item">
+            <a href="">
+              <img src="./assets/images/colection/paper.svg" alt="">
+              <span class="d-block text-center">Папір</span>
+            </a>
+          </li>
+          <li class="collection-list--item">
+            <a href="">
+              <img src="./assets/images/colection/organic.svg" alt="">
+              <span class="d-block text-center">Органіка</span>
+            </a>
+          </li>
+
+        </ul>
+      </div>
+    </section>
 
 
 
