--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
           <h1 class="mb-26">Welcome to Vinnytsia trash company!</h1>
           <span class="d-block mb-46">Choose your job down below to start working.</span>
           <div class="btn-wrapper d-flex mb-44">
-            <button class="w-50 mr-20 driver-btn"><img class="mr-10" src="./assets/images/welcome-block/driver.svg" alt="driver-icon">I’m a driver</button>
-            <button class="w-50 operator-btn"><img class="mr-10" src="./assets/images/welcome-block/operator.svg" alt="operator-icon"> I’m an operator</button>
+            <button class="w-50 mr-20 driver-btn"><img class="mr-10 mb-0 mt-0" src="./assets/images/welcome-block/driver.svg" alt="driver-icon">I’m a driver</button>
+            <button class="w-50 operator-btn"><img class="mr-10 mb-0 mt-0" src="./assets/images/welcome-block/operator.svg" alt="operator-icon"> I’m an operator</button>
           </div>
           <p>We want Vinnitsya to be cleaner, safer and healthier city – not just for today, but for next generations to come. RubbishIT is experienced in providing environmentally responsible solutions to meet current and future market recycling and solid waste needs.</p>
           <div class="welcome-block-img"></div>
