--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a class="nav-link" href="#collection">Garbage Collecting Points</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Ground Map</a>
+                <a class="nav-link" href="#map">Ground Map</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -163,12 +163,47 @@
               <span class="d-block text-center">Органіка</span>
             </a>
           </li>
-
         </ul>
       </div>
     </section>
 
+    <section id="map">
+      <div class="container-lg">
+        <h2 class="map-title text-center mb-32">Ground map</h2>
+        <p class="map-subtitle text-center center col col-md-6">We want Vinnitsya to be cleaner, safer and healthier city – not just for today, but for next generations to come. </p>
+        <div class="map-wrapper w-100">
+          <iframe class="col-8 center" src="https://www.google.com/maps/d/embed?mid=1364L8Cyg7OjL0DooGgiJ1iQ6G_GG8ZUa&ehbc=2E312F"
+            width="100%" height="500px">
+          </iframe>
+        </div>
 
+      </div>
+    </section>
+    
+    <section id="news">
+        <iframe class="news__video" width="40%" height="395" src="https://www.youtube.com/embed/UojCr2Z-85g?autoplay=1&mute=1"
+          title="YouTube video player" frameborder="0" allow="accelerometer; autoplay;
+          clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
+        
+        <div class="news__text-block">
+          <h2 class="news__text-block--title mb-41">Vinnytsia has installed a new garbage ground</h2>
+          <p class="news__text-block--top mb-30">We want Vinnitsya to be cleaner, safer and healthier city – not just for today,
+            but for next generations to come. We want Vinnitsya to be cleaner,
+            safer and healthier city – not just for today, but for next generations to come.
+          </p>
+          <p class="news__text-block--bottom">
+            We want Vinnitsya to be cleaner, safer and healthier city – not just for today, but for next generations to come.
+            We want Vinnitsya to be cleaner, safer and healthier city – not just for today, but for next generations to come.
+            We want Vinnitsya to be cleaner, safer and healthier city – not just for today, but for next generations to come.
+          </p>
+        </div>
+        <div class="darkening"></div>
+    </section>
+
+    <footer class="footer">
+
+    </footer>
 
     <script src="assets/plugins/jquery/jquery-1.11.2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
