--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <h2 class="map-title text-center mb-32">Ground map</h2>
         <p class="map-subtitle text-center center col col-md-6">We want Vinnitsya to be cleaner, safer and healthier city – not just for today, but for next generations to come. </p>
         <div class="map-wrapper w-100">
-          <iframe class="col-8 center" src="https://www.google.com/maps/d/embed?mid=1364L8Cyg7OjL0DooGgiJ1iQ6G_GG8ZUa&ehbc=2E312F"
+          <iframe class="col-10 col-lg-8 center" src="https://www.google.com/maps/d/embed?mid=1364L8Cyg7OjL0DooGgiJ1iQ6G_GG8ZUa&ehbc=2E312F"
             width="100%" height="500px">
           </iframe>
         </div>
@@ -181,7 +181,7 @@
     </section>
     
     <section id="news">
-        <iframe class="news__video" width="40%" height="395" src="https://www.youtube.com/embed/UojCr2Z-85g?autoplay=1&mute=1"
+        <iframe class="news__video" width="40%" height="390" src="https://www.youtube.com/embed/UojCr2Z-85g?autoplay=1&mute=1"
           title="YouTube video player" frameborder="0" allow="accelerometer; autoplay;
           clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
@@ -202,7 +202,21 @@
     </section>
 
     <footer class="footer">
+      <div class="container-lg">
+        <div class="row">
+          <div class="col-4">
+            <div class="logo">
+              <img src="/assets/images/logo.svg" alt="logo">
+            </div>
+            <p>We ara a lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat...</p>
+            <ul>
 
+            </ul>
+          </div>
+          <div class="col-4"></div>
+          <div class="col-4"></div>
+        </div>
+      </div>
     </footer>
 
     <script src="assets/plugins/jquery/jquery-1.11.2.min.js"></script>
