--- a/index.html
+++ b/index.html
@@ -204,17 +204,71 @@
     <footer class="footer">
       <div class="container-lg">
         <div class="row">
-          <div class="col-4">
+          <div class="footer-wrapper col-12 col-lg-4">
             <div class="logo">
               <img src="/assets/images/logo.svg" alt="logo">
             </div>
-            <p>We ara a lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat...</p>
-            <ul>
-
+            <p class="footer-text col-10">We ara a lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat...</p>
+            <ul class="footer__list">
+              <li class="footer__list--item"><a href="">
+                <span class="img-wrapper rounded-circle"><img src="/assets/images/footer/call.png" alt="calls"></span>
+                <div>
+                  <span class="col-10 p-0 d-block">Tel</span>
+                  <a class="col-10" href="tel:+380 96 298 04 80">+380 96 298 04 80</a>
+                </div>
+              </a></li>
+              <li class="footer__list--item"><a href="">
+                <span class="img-wrapper rounded-circle"><img src="/assets/images/footer/sms.png" alt="calls"></span>
+                <div>
+                  <span class="col-10 p-0 d-block">Mail</span>
+                  <a class="col-10" href="">unreal@outlook.com</a>
+                </div>
+              </a></li>
+              <li class="footer__list--item"><a href="">
+                <span class="img-wrapper rounded-circle"><img src="/assets/images/footer/location.png" alt="calls"></span>
+                <div>
+                  <span class="col-10 p-0 d-block">Address</span>
+                  <a class="col-10" href="">706 Campfire Ave. Meriden, CT 06450</a>
+                </div>
+              </a></li>
+              <li class="footer__list--item"><a href="">
+                <span class="img-wrapper rounded-circle"><img src="/assets/images/footer/printer.png" alt="calls"></span>
+                <div>
+                  <span class="col-10 p-0 d-block">Fax</span>
+                  <a class="col-10" href="">+1-212-9876543</a>
+                </div>
+              </a></li>
             </ul>
           </div>
-          <div class="col-4"></div>
-          <div class="col-4"></div>
+          <div class="footer-wrapper col-12 col-lg-4">
+            <h3 class="footer-title">Support</h3>
+            <p class="footer-text">We usually respond before 24 hours.</p>
+            <form class="footer-feedback" action="">
+              <input class="inp-small col-12 mb-16" type="text" placeholder="Name">
+              <input class="inp-small col-12 mb-16" type="text" placeholder="Email">
+              <input class="inp-message col-12 mb-16" type="text" placeholder="Massage">
+              <button class="footer-submit-btn col-12 border-0">Submit</button>
+            </form>
+          </div>
+          <div class="footer-wrapper col-12 col-lg-4">
+            <h3 class="footer-title">Social Media</h3>
+            <p class="footer-text">Be the first one to know  about discounts, offers and events</p>
+            <ul class="footer__list d-flex">
+              <li class="footer__list--item"><a href="">
+                <span class="img-wrapper rounded-circle"><img src="/assets/images/footer/facebook.png" alt=""></span>
+              </a></li>
+              <li class="footer__list--item"><a href="">
+                <span class="img-wrapper rounded-circle"><img src="/assets/images/footer/youtube.png" alt=""></span>
+              </a></li>
+              <li class="footer__list--item"><a href="">
+                <span class="img-wrapper rounded-circle"><img src="/assets/images/footer/dribbble.png" alt=""></span>
+              </a></li>
+              <li class="footer__list--item"><a href="">
+                <span class="img-wrapper rounded-circle"><img src="/assets/images/footer/whatsapp.png" alt=""></span>
+              </a></li>
+            </ul>
+          </div>
+          <div class="copyright col-12"><span>© 2022, All Rights Reserved</span></div>
         </div>
       </div>
     </footer>
